# NeoTools

./: .gitignore  CMakeLists.txt  README.md
ProjectManager/: Backend.cpp  Backend.h  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newprojectwizard.ui
